# Bewerbung_MLCU_KOALA

./: .dockerignore  AGENTS.md  LICENSE  README.md  pyproject.toml  streamlit_app.py  tasks.py
data/: sample.csv
docker/: app.Dockerfile
src/wahlumfragen/: app.py  data.py  model.py  train.py  visualize.py
tests/: test_app.py  test_data.py  test_model.py  test_visualize.py
